--- a/style.css
+++ b/style.css
@@ -62,4 +62,13 @@ body {
     color: #2fd4a3; /* Rich Green */
 }
 
+/* Smartphones (portrait) ---------------- */
+@media only screen and (max-width : 400px)
+{
+ 
+    .star {
+        font-size: 1.9rem;
+    }
+
+}
 
